--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time and Frequency Converter</title>
+    <link rel="icon" type="image/x-icon" href="myicon.ico">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #121212;
+            color: #ffffff;
         }
         .container {
             display: flex;
             gap: 20px;
+            margin-bottom: 40px;
         }
         .column {
             flex: 1;
-            border: 1px solid #ccc;
+            border: 1px solid #444;
             padding: 20px;
             border-radius: 8px;
+            background-color: #1e1e1e;
         }
         label, input, select, button {
             display: block;
@@ -36,9 +41,61 @@
             margin-top: 20px;
             font-weight: bold;
         }
+        .button-group {
+            display: flex;
+            gap: 10px;
+            margin-top: 10px;
+        }
+        .xor-section {
+            margin-top: 40px;
+        }
+        .xor-inputs {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+            align-items: center;
+        }
+        .xor-inputs input {
+            width: 50px;
+            text-align: center;
+            padding: 5px;
+            background-color: #333;
+            color: #ffffff;
+            border: 1px solid #444;
+            border-radius: 5px;
+        }
+        .xor-result {
+            margin-top: 20px;
+            font-weight: bold;
+        }
+        .copy-button, .convert-button {
+            padding: 5px 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .copy-button:hover, .convert-button:hover {
+            background-color: #0056b3;
+        }
+        .log-section {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #1e1e1e;
+            border: 1px solid #444;
+            border-radius: 8px;
+            max-height: 200px;
+            overflow-y: auto;
+        }
+        .log-entry {
+            margin-bottom: 5px;
+            font-family: monospace;
+        }
     </style>
 </head>
 <body>
+    <!-- Time and Frequency Converter -->
     <div class="container">
         <!-- Left Column: Time to Frequency -->
         <div class="column">
@@ -65,7 +122,7 @@
                 </select>
             </div>
 
-            <button onclick="convertTimeToFrequency()">Convert</button>
+            <button class="convert-button" onclick="convertTimeToFrequency()">Convert</button>
         </div>
 
         <!-- Right Column: Frequency to Time -->
@@ -93,8 +150,28 @@
                 </select>
             </div>
 
-            <button onclick="convertFrequencyToTime()">Convert</button>
+            <button class="convert-button" onclick="convertFrequencyToTime()">Convert</button>
         </div>
+    </div>
+
+    <!-- XOR Checksum Calculator -->
+    <div class="xor-section">
+        <h2>XOR Checksum Calculator</h2>
+        <div class="xor-inputs">
+            <input type="text" id="xor1" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor1', 'xor2')" onkeydown="handleBackspace(event, 'xor1', null)" autocomplete="off">
+            <input type="text" id="xor2" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor2', 'xor3')" onkeydown="handleBackspace(event, 'xor2', 'xor1')" autocomplete="off">
+            <input type="text" id="xor3" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor3', 'xor4')" onkeydown="handleBackspace(event, 'xor3', 'xor2')" autocomplete="off">
+            <input type="text" id="xor4" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor4', 'xor5')" onkeydown="handleBackspace(event, 'xor4', 'xor3')" autocomplete="off">
+            <input type="text" id="xor5" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor5', 'xor6')" onkeydown="handleBackspace(event, 'xor5', 'xor4')" autocomplete="off">
+            <input type="text" id="xor6" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor6', 'xor7')" onkeydown="handleBackspace(event, 'xor6', 'xor5')" autocomplete="off">
+            <input type="text" id="xor7" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor7', 'xor8')" onkeydown="handleBackspace(event, 'xor7', 'xor6')" autocomplete="off">
+            <input type="text" id="xor8" maxlength="2" placeholder="00" oninput="handleXORInput(event, 'xor8', null)" onkeydown="handleBackspace(event, 'xor8', 'xor7')" autocomplete="off">
+            <button class="copy-button" onclick="copyXORResult()">Copy</button>
+        </div>
+        <div class="xor-result">
+            Result: <span id="xorResult">00</span>
+        </div>
+        <div class="log-section" id="logSection"></div>
     </div>
 
     <script>
@@ -170,6 +247,90 @@
             // Limit to a maximum of 3 decimal places
             return value.toFixed(Math.min(fractionalDigits, 3));
         }
+
+        // Function to handle XOR input
+        function handleXORInput(event, currentId, nextId) {
+            const input = event.target;
+            const value = input.value.toUpperCase().replace(/[^0-9A-F]/g, ''); // Allow only hex characters
+            input.value = value;
+
+            // If two characters are entered, move to the next input
+            if (value.length === 2 && nextId) {
+                document.getElementById(nextId).focus();
+            }
+        }
+
+        // Function to handle backspace navigation
+        function handleBackspace(event, currentId, previousId) {
+            if (event.key === "Backspace" && event.target.value === "" && previousId) {
+                document.getElementById(previousId).focus();
+            }
+        }
+
+        // Function to calculate XOR checksum
+        function calculateXOR() {
+            const inputs = [
+                document.getElementById("xor1").value,
+                document.getElementById("xor2").value,
+                document.getElementById("xor3").value,
+                document.getElementById("xor4").value,
+                document.getElementById("xor5").value,
+                document.getElementById("xor6").value,
+                document.getElementById("xor7").value,
+                document.getElementById("xor8").value
+            ];
+
+            // Filter out empty inputs
+            const enteredInputs = inputs.filter(value => value.length > 0);
+
+            let xorResult = 0;
+            for (let i = 0; i < enteredInputs.length; i++) {
+                let hexValue = enteredInputs[i];
+                if (hexValue.length === 1) {
+                    hexValue += "0"; // Treat single digit as MSB nibble
+                }
+                xorResult ^= parseInt(hexValue, 16);
+            }
+
+            // Display the result in hexadecimal format
+            const resultHex = xorResult.toString(16).padStart(2, "0").toUpperCase();
+            document.getElementById("xorResult").innerText = resultHex;
+
+            // Log the calculation
+            logXORCalculation(enteredInputs, resultHex);
+        }
+
+        // Function to log XOR calculations
+        function logXORCalculation(inputs, result) {
+            const logSection = document.getElementById("logSection");
+            const logEntry = document.createElement("div");
+            logEntry.className = "log-entry";
+            logEntry.innerText = `${inputs.join(" XOR ")} = ${result}`;
+            logSection.prepend(logEntry); // Add new log at the top
+        }
+
+        // Function to copy XOR result to clipboard
+        function copyXORResult() {
+            const resultHex = document.getElementById("xorResult").innerText;
+            navigator.clipboard.writeText(resultHex).then(() => {
+                alert("Copied to clipboard: " + resultHex);
+            });
+        }
+
+        // Add Enter key functionality
+        document.addEventListener("keydown", (event) => {
+            if (event.key === "Enter") {
+                if (event.target.closest(".column")) {
+                    if (event.target.id === "timeInput" || event.target.id === "timeInputUnit") {
+                        convertTimeToFrequency();
+                    } else if (event.target.id === "frequencyInput" || event.target.id === "frequencyInputUnit") {
+                        convertFrequencyToTime();
+                    }
+                } else if (event.target.closest(".xor-inputs")) {
+                    calculateXOR();
+                }
+            }
+        });
     </script>
 </body>
 </html>
